style(members.css img add)MEMBERSのCONTENTを追加

--- a/index.html
+++ b/index.html
@@ -148,29 +148,31 @@
         </div>
         <div class="about_container">
             <table class="about_table">
-                <tr>
-                    <th>名称</th>
-                    <td>ChiePro</td>
-                </tr>
-                <tr>
-                    <th>代表者名</th>
-                    <td>SHINE</td>
-                </tr>
-                <tr>
-                    <th rowspan="2">活動内容</th>
-                    <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
-                </tr>
-                <tr>
-                    <td>開発中等に分からないことがあった箇所についてレクチャー</td>
-                </tr>
-                <tr>
-                    <th>設立年月日</th>
-                    <td>2017/11/13</td>
-                </tr>
-                <tr>
-                    <th>会員数</th>
-                    <td>9名</td>
-                </tr>
+                <tbody>
+                    <tr>
+                        <th>名称</th>
+                        <td>ChiePro</td>
+                    </tr>
+                    <tr>
+                        <th>代表者名</th>
+                        <td>SHINE</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">活動内容</th>
+                        <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
+                    </tr>
+                    <tr>
+                        <td>開発中等に分からないことがあった箇所についてレクチャー</td>
+                    </tr>
+                    <tr>
+                        <th>設立年月日</th>
+                        <td>2017/11/13</td>
+                    </tr>
+                    <tr>
+                        <th>会員数</th>
+                        <td>9名</td>
+                    </tr>
+                </tbody>
             </table>
             <p><img src="./img/about_logo.png"></p>
         </div>
@@ -200,6 +202,122 @@
 
     </div>
 
+    <!-- members content -->
+    <div class="members">
+        <div class="about_title">
+            <h1>MEMBERS</h1>
+        </div>
+        <div class="members_content">
+
+            <table class="members_table members_table_right">
+                <tbody>
+                    <tr>
+                        <th>・名前</th>
+                        <td>SHINE(リーダー)</td>
+                    </tr>
+                    <tr>
+                        <th>・プログラミング歴</th>
+                        <td>6～7年</td>
+                    </tr>
+                    <tr>
+                        <th>・得意な言語</th>
+                        <td>Java,HTML,CSS,Javascript,PHP,C++等</td>
+                    </tr>
+                    <tr>
+                        <th>・資格</th>
+                        <td>ITﾊﾟｽﾎﾟｰﾄ,基本情報技術者試験,CG-ARTS,Webデザイナー検定 ベーシック等</td>
+                    </tr>
+                    <tr>
+                        <th>メッセージ</th>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" colspan="2" class="messege_line">
+                            当コミュニティ ChiePro の管理者、 SHINE と申します。
+                            皆でアプリ開発とか出来たら面白いよねーとか考えてたり、
+                            プロコンとかアプリ展覧会的なのに出て実績残したいなと考えてたり。
+                            私自身は四六時中プログラミングやってるそんな変態リーダーです。夜露死苦！
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p><img src="./img/shine.iocn.png"></p>
+        </div>
+
+        <!-- Diggy -->
+        <div class="members_content">
+
+            <p><img src="./img/diggy.icon.png"></p>
+
+            <table class="members_table members_table_left">
+                <tbody>
+                    <tr>
+                        <th>・名前</th>
+                        <td>おすね(Diggy)</td>
+                    </tr>
+                    <tr>
+                        <th>・プログラミング歴</th>
+                        <td>未経験入社なので、10ヶ月目</td>
+                    </tr>
+                    <tr>
+                        <th>・得意な言語</th>
+                        <td>C#</td>
+                    </tr>
+                    <tr>
+                        <th>・資格</th>
+                        <td>ITパスポート</td>
+                    </tr>
+                    <tr>
+                        <th>メッセージ</th>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" colspan="2" class="messege_line">
+                            自分を一言でいうと「自信家」<br>スポーツ、ゲーム、バイト、etc.. 何をやらせても人並み以上に出来ると自負している。<br>
+                            きっと、この業界でもトップクラスのエンジニアになってみせる。
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- regupn -->
+
+        <div class="members_content">
+
+                <table class="members_table members_table_right">
+                    <tbody>
+                        <tr>
+                            <th>・名前</th>
+                            <td>レグポン</td>
+                        </tr>
+                        <tr>
+                            <th>・プログラミング歴</th>
+                            <td>大学の授業レベルを含めたら、５年</td>
+                        </tr>
+                        <tr>
+                            <th>・得意な言語</th>
+                            <td>C#,PHP,HTML,Java,JavaScript,VBA</td>
+                        </tr>
+                        <tr>
+                            <th>・資格</th>
+                            <td>基本情報処理技術者試験,医療情報技師,FP３級,日商簿記３級</td>
+                        </tr>
+                        <tr>
+                            <th>メッセージ</th>
+                        </tr>
+                        <tr>
+                            <td rowspan="2" colspan="2" class="messege_line">
+                                    もっと面白く、もっと楽しく、もっと無邪気に。そう、まるで放課後の小学生のように。
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <p><img src="./img/regupon_icon.png"></p>
+
+            </div>
+
+    </div>
 
     <!-- footer -->
     <footer>
