style(members.css img add)MEMBERSのCONTENTの修正

--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
     </div>
 
     <!-- members content -->
+    <!-- SHINE -->
     <div class="members">
         <div class="about_title">
             <h1>MEMBERS</h1>
         </div>
         <div class="members_content">
-
             <table class="members_table members_table_right">
                 <tbody>
                     <tr>
@@ -240,15 +240,12 @@
                     </tr>
                 </tbody>
             </table>
-
             <p><img src="./img/shine.iocn.png"></p>
         </div>
 
         <!-- Diggy -->
         <div class="members_content">
-
             <p><img src="./img/diggy.icon.png"></p>
-
             <table class="members_table members_table_left">
                 <tbody>
                     <tr>
@@ -281,7 +278,6 @@
         </div>
 
         <!-- regupn -->
-
         <div class="members_content">
 
                 <table class="members_table members_table_right">
@@ -317,6 +313,42 @@
 
             </div>
 
+            <!-- regupn -->
+        <div class="members_content">
+            <p><img src="./img/abeno.icon.png"></p>
+            <table class="members_table members_table_left">
+                <tbody>
+                    <tr>
+                        <th>・名前</th>
+                        <td>あべのさん(Web担当)</td>
+                    </tr>
+                    <tr>
+                        <th>・プログラミング歴</th>
+                        <td>4ヶ月</td>
+                    </tr>
+                    <tr>
+                        <th>・得意な言語</th>
+                        <td>HTML5,CSS3</td>
+                    </tr>
+                    <tr>
+                        <th>・資格</th>
+                        <td>　---  </td>
+                    </tr>
+                    <tr>
+                        <th>メッセージ</th>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" colspan="2" class="messege_line">
+                            メンバーの中で最もキャリアが短いです。<br>
+                            このホームページも一から言語を学び完成させました。<br>
+                            様々な言語を学ぶことで、社会に貢献できるようなエンジニアになりたいと考えております。<br>
+                            「未来を恐れず、過去に執着せず、今を生きろ。」<br>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
     </div>
 
     <!-- footer -->
