--- a/index.html
+++ b/index.html
@@ -358,38 +358,77 @@
         <div class="about_title">
             <h1>開発実績</h1>
         </div>
+
         <div class="developmnt_content">
-            <div>
-                <button class="open-options button">
-                    <div>
-                        <img src="./img/100.png">
-                        <p>反射神経ゲーム</p>
-                        <p>(C# WindowsForm)</p>
-                    </div>
-                </button>
-                <div class="modal-options" data-izimodal-loop="" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
-                    <img src="./img/regupon_icon.png" width="100" height="100">
-                    <p>ここに概要を記載.............................</p>
-                    <p>.............................</p>
-                    <p>........................</p>
+
+            <!-- 反射神経ゲーム -->
+            <div class="botton_size">
+            <button data-izimodal-open="#reflection">
+                <div>
+                    <img src="./img/100.png">
+                    <p>反射神経ゲーム</p>
+                    <p class="language">(C# WindowsForm)</p>
                 </div>
+            </button>
+            </div>
+            <div id="reflection" class="modal-options" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
+                <img src="./img/regupon_icon.png">
+                <p>ここに概要を記載.............................</p>
+                <p>.............................</p>
+                <p>........................</p>
             </div>
 
-            <div>
-                <button class="open-options button">
-                    <div>
-                        <img src="./img/logo.png">
-                        <p>わっさ。</p>
-                        <p>(C# WindowsForm)</p>
-                    </div>
-                </button>
-                <div class="modal-options" data-izimodal-loop="" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
-                    <img src="./img/shine.iocn.png" width="100" height="100">
-                    <p>ここに概要を記載.............................</p>
-                    <p>.............................</p>
-                    <p>........................</p>
+            <!-- 100マスRPG -->
+            <div class="botton_size">
+            <button data-izimodal-open="#rpg100">
+                <div>
+                    <img src="./img/100.png">
+                    <p>100マスRPGダンジョン</p>
+                    <p class="language">(Java)</p>
                 </div>
+            </button>
             </div>
+            <div id="rpg100" class="modal-options" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
+                <img src="./img/100.png">
+                <p>ここに概要を記載.............................</p>
+                <p>.............................</p>
+                <p>........................</p>
+            </div>
+
+            <!-- BMI計算機 -->
+            <div class="botton_size">
+            <button data-izimodal-open="#bmi" class="botton">
+                <div>
+                    <img src="./img/100.png">
+                    <p>BMI計算機</p>
+                    <p class="language">(C# WindowsForm)</p>
+                </div>
+            </button>
+            </div>
+            <div id="bmi" class="modal-options" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
+                <img src="./img/100.png">
+                <p>ここに概要を記載.............................</p>
+                <p>.............................</p>
+                <p>........................</p>
+            </div>
+
+            <!-- オウム 神経衰弱 -->
+            <div class="botton_size">
+            <button data-izimodal-open="#orm">
+                <div>
+                    <img src="./img/100.png">
+                    <p>オウムで神経衰弱</p>
+                    <p class="language">(C# WindowsForm)</p>
+                </div>
+            </button>
+            </div>
+            <div id="orm" class="modal-options" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
+                <img src="./img100.png">
+                <p>ここに概要を記載.............................</p>
+                <p>.............................</p>
+                <p>........................</p>
+            </div>
+        </div>
         </div>
     </div>
 
@@ -441,21 +480,16 @@
                 startSlide: 0,  // 一番初めの画像からスライドをスタート
                 pause: 6000 // ページの滞在時間(ms)
             });
-        });
 
-        $(document).on('click', '.open-options', function(event) {
-            event.preventDefault();
-        $('.modal-options').iziModal('open');
-            });
-        $('.modal-options').iziModal({
+            $('.modal-options').iziModal({
             headerColor: '#8fbc8f', //ヘッダー部分の色
-            width: 600, //横幅
+            width: '40%', //横幅
             overlayColor: 'rgba(0, 0, 0, 0.2)', //モーダルの背景色
-            fullscreen: true, //全画面表示
             transitionIn: 'fadeInUp', //表示される時のアニメーション
             transitionOut: 'fadeOutDown' //非表示になる時のアニメーション
+            });
         });
-    </script>
 
+    </script>
 </body>
 </html>
