style(reflection.css img.add)学習言語を追加

--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
 
     <!-- container -->
     <div id="about">
-        <div class="about_title">
-            <h1>ChieProとは</h1>
-        </div>
+        <div class="about_title"><h1>ChieProとは</h1></div>
+
         <div class="about_container">
             <table class="about_table">
                 <tbody>
@@ -206,9 +205,8 @@
     <!-- members content -->
     <!-- SHINE -->
     <div class="members">
-        <div class="about_title">
-            <h1>MEMBERS</h1>
-        </div>
+        <div class="about_title"><h1>MEMBERS</h1></div>
+
         <div class="members_content">
             <table class="members_table members_table_right">
                 <tbody>
@@ -355,9 +353,7 @@
     <!-- ACTIVITY -->
     <!-- Development -->
     <div class="development">
-        <div class="about_title">
-            <h1>開発実績</h1>
-        </div>
+        <div class="about_title"><h1>開発実績</h1></div>
 
         <div class="developmnt_content">
 
@@ -432,6 +428,23 @@
         </div>
     </div>
 
+    <!-- reflection -->
+    <div class="reflection">
+        <div class="about_title"><h1>学習言語</h1></div>
+            <div class="reflection_icon">
+                <p><img src="./img/htmlcss.png"></p>
+                <p><img src="./img/java.png"></p>
+                <p><img src="./img/javascript.png"></p>
+            </div>
+            <div class="reflection_icon">
+                <p><img src="./img/python.png"></p>
+                <p><img src="./img/c.png"></p>
+                <p><img src="./img/php.png"></p>
+            </div>
+            <div class="reflection_text"><p>※ ここに記載のあるもの以外にも学習しております。</p></div>
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="footer_wrap">
@@ -482,11 +495,11 @@
             });
 
             $('.modal-options').iziModal({
-            headerColor: '#8fbc8f', //ヘッダー部分の色
-            width: '40%', //横幅
-            overlayColor: 'rgba(0, 0, 0, 0.2)', //モーダルの背景色
-            transitionIn: 'fadeInUp', //表示される時のアニメーション
-            transitionOut: 'fadeOutDown' //非表示になる時のアニメーション
+                headerColor: '#8fbc8f', //ヘッダー部分の色
+                width: '40%', //横幅
+                overlayColor: 'rgba(0, 0, 0, 0.2)', //モーダルの背景色
+                transitionIn: 'fadeInUp', //表示される時のアニメーション
+                transitionOut: 'fadeOutDown' //非表示になる時のアニメーション
             });
         });
 
