style(layout.css,reflection.css)学習言語の追加

--- a/index.html
+++ b/index.html
@@ -429,25 +429,36 @@
     </div>
 
     <!-- reflection -->
-    <div class="reflection">
+    <div class="circle_layout">
         <div class="about_title"><h1>学習言語</h1></div>
-            <div class="reflection_icon">
-                <p><img src="./img/htmlcss.png"></p>
-                <p><img src="./img/java.png"></p>
-                <p><img src="./img/javascript.png"></p>
-            </div>
-            <div class="reflection_icon">
-                <p><img src="./img/python.png"></p>
-                <p><img src="./img/c.png"></p>
-                <p><img src="./img/php.png"></p>
-            </div>
-            <div class="reflection_text"><p>※ ここに記載のあるもの以外にも学習しております。</p></div>
+        <div class="circle_layout_content">
+            <p><img src="./img/htmlcss.png"></p>
+            <p><img src="./img/java.png"></p>
+            <p><img src="./img/javascript.png"></p>
         </div>
+        <div class="circle_layout_content">
+            <p><img src="./img/python.png"></p>
+            <p><img src="./img/c.png"></p>
+            <p><img src="./img/php.png"></p>
+        </div>
+        <div class="reflection_text"><p>※ ここに記載のあるもの以外にも学習しております。</p></div>
+        </div>
+    </div>
+
+    <!-- tool -->
+    <div class="circle_layout">
+        <div class="about_title"><h1>ChiePro標準ツール</h1></div>
+    </div>
+    <div class="circle_layout_content size_icon">
+        <p><img src="./img/slack.png">slack</p>
+        <p><img src="./img/githun.png">Github</p>
+        <p><img src="./img/ecripse.png">Ecripse</p>
+        <p><img src="./img/Visual StudioCode.png">VScode</p>
     </div>
 
     <!-- footer -->
     <footer>
-        <div class="footer_wrap">
+    <div class="footer_wrap">
         <ul>
             <li><h2>ABOUT</h2>
                 <ul>
