style(footer.css,index.html)添削箇所を修正

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             </li>
         </ul>
     </div>
-    <div class="footer_copyright">
-        <p>&copy 2018 ChiePro</p>
+    <div class="copyright">
+        <p>&copy; 2018 ChiePro</p>
     </div>
     </footer>
 
