style(question.css)よくあるご質問コンテンツの追加

--- a/index.html
+++ b/index.html
@@ -456,6 +456,23 @@
         <p><img src="./img/Visual StudioCode.png">VScode</p>
     </div>
 
+    <!-- Q&A-->
+    <div class="content_question">
+        <div class="about_title"><h1>Q&A よくあるご質問</h1></div>
+        <ul>
+            <li><h2>Q.入会料は無料ですか？</h2></li>
+            <li><p>A.はい、無料です。皆様にプログラミングの楽しさを実感していただきたいために、無料とさせていただいております。</p></li>
+
+            <li><h2>Q.プログラミング未経験ですが、入会可能ですか？</h2></li>
+            <li><p>A.はい、可能です。モラルがある方なら誰でも大歓迎です。</p></li>
+
+            <li><h2>Q.学生ですが入会可能ですか？</h2></li>
+            <li><p>A.はい、可能です。学生ならではのアイデアを共有してください！</p></li>
+
+            <li><h2>Q.途中で退会することは可能ですか？</h2></li>
+            <li><p>A.はい、可能です。管理者に一言頂けると幸いです。運営改善のために参考にさせていただきます。</p></li>
+        </ul>
+    </div>
     <!-- footer -->
     <footer>
     <div class="footer_wrap">
