--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
     <form action="" method="">
         <div class="content_form">
             <div class="about_title"><h1>応募・お問い合わせフォーム</h1></div>
+            <div class="content_table">
                 <table class="form_table about_table">
                     <tr>
                         <td colspan="4" class="table_center"><span><input type="radio" name="example" value="応募">応募</span><span><input type="radio" name="example" value="お問い合わせ">お問い合わせ</span></td>
@@ -535,6 +536,9 @@
                     </tr>
                 </table>
             </div>
+        </div>
+        <div class="aho">
+                <p>erhgehfsfdhfdsghgfshfdghhg<</p>
         </div>
     </form>
     <!-- footer -->
