style(form.css)修正

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="4" class="table_center form_top_line"><p><button type="submit" name="確認" value="deta">内容を確認する</button></p></td>
+                        <td colspan="4" class="table_center form_top_line"><p><button type="submit" name="確認" value="deta">送信する</button></p></td>
                     </tr>
                 </table>
             </div>
