--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </button>
             </div>
             <div id="orm" class="modal-options" data-izimodal-title="オプション設定モーダル" data-izimodal-subtitle="サブタイトル">
-                <img src="./img100.png">
+                <img src="./img/100.png">
                 <p>ここに概要を記載.............................</p>
                 <p>.............................</p>
                 <p>........................</p>
