--- a/index.html
+++ b/index.html
@@ -142,41 +142,6 @@
         </div>
     </div>
 
-    <!-- container -->
-    <div id="about">
-        <div class="about_title"><h1>ChieProとは</h1></div>
-
-        <div class="about_container">
-            <table class="about_table">
-                <tbody>
-                    <tr>
-                        <th>名称</th>
-                        <td>ChiePro</td>
-                    </tr>
-                    <tr>
-                        <th>代表者名</th>
-                        <td>SHINE</td>
-                    </tr>
-                    <tr>
-                        <th rowspan="2">活動内容</th>
-                        <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
-                    </tr>
-                    <tr>
-                        <td>開発中等に分からないことがあった箇所についてレクチャー</td>
-                    </tr>
-                    <tr>
-                        <th>設立年月日</th>
-                        <td>2017/11/13</td>
-                    </tr>
-                    <tr>
-                        <th>会員数</th>
-                        <td>9名</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p><img src="./img/about_logo.png"></p>
-        </div>
-
         <!-- purpose -->
         <div class="about_purpose">
             <div class="about_title">
@@ -453,6 +418,42 @@
         <p><img src="./img/githun.png">Github</p>
         <p><img src="./img/ecripse.png">Ecripse</p>
         <p><img src="./img/Visual StudioCode.png">VScode</p>
+    </div>
+
+        <!-- container -->
+    <div id="about">
+        <div class="about_title"><h1>ChiePro</h1></div>
+
+        <div class="about_container">
+            <table class="about_table">
+                <tbody>
+                    <tr>
+                        <th>名称</th>
+                        <td>ChiePro</td>
+                    </tr>
+                    <tr>
+                        <th>代表者名</th>
+                        <td>SHINE</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">活動内容</th>
+                        <td>プログラミング言語やフレームワーク等を勉強したい方へのレクチャー</td>
+                    </tr>
+                    <tr>
+                        <td>開発中等に分からないことがあった箇所についてレクチャー</td>
+                    </tr>
+                    <tr>
+                        <th>設立年月日</th>
+                        <td>2017/11/13</td>
+                    </tr>
+                    <tr>
+                        <th>会員数</th>
+                        <td>9名</td>
+                    </tr>
+                </tbody>
+            </table>
+        <div class="table_color"></div>
+        <p><img src="./img/about_logo.png"></p>
     </div>
 
     <!-- Q&A-->
