--- a/index.html
+++ b/index.html
@@ -142,36 +142,44 @@
         </div>
     </div>
 
-        <!-- purpose -->
-        <div class="about_purpose">
-            <div class="about_title">
-                <h1>活動目的</h1>
-            </div>
-            <div class="about_text">
-                <p>ChiePro では、お互いにプログラミング言語やフレームワーク等について教えあうことで個々の技術力向上を目指しています。</p>
-                <p>一人一人が作りたいものを作り、その中で技術習得し、さらにいいものを作ります。必要であれば、有識者が指導致します。</p>
-                <p>各メンバーがそれぞれの場で活躍できることを願っております。</p>
-            </div>
-            <p><img src="./img/about_purpose.jpg"></p>
-        </div>
+    <!-- top text-->
+    <div class="top_introduction frame">
+        <h1>はじめに</h1>
+            <p>ChiePro は IT エンジニアのコミュニティです。</p>
+            <p>某知恵共有サービスサイトで活動中のエンジニアを集めたところからスタートしました。</p>
+            <p>有料セミナーなどに行かなくても気兼ねなく質問できる環境、そんな場所があれば良いなと思い立ち上げたのが ChiePro です。</p>
+    </div>
 
-        <!-- talent -->
-        <div class="about_talent">
-            <div class="about_title">
-                <h1>求める人材</h1>
-            </div>
-            <div class="talent_text">
-                <p>初心者でも問題なし！経験者優遇！モラルがある方なら誰でも大歓迎です。</p>
-            </div>
+        <!-- purpose -->
+    <div class="about_purpose frame">
+        <div class="about_title">
+            <h1>活動目的</h1>
+        </div>
+        <div class="about_text">
+            <p>ChiePro では、お互いにプログラミング言語やフレームワーク等について教えあうことで個々の技術力向上を目指しています。</p>
+            <p>一人一人が作りたいものを作り、その中で技術習得し、さらにいいものを作ります。必要であれば、有識者が指導致します。</p>
+            <p>各メンバーがそれぞれの場で活躍できることを願っております。</p>
+        </div>
+        <p><img src="./img/about_purpose.jpg"></p>
+    </div>
+
+    <!-- talent -->
+    <div class="about_talent frame">
+        <div class="about_title">
+            <h1>求める人材</h1>
+        </div>
+        <div class="talent_text">
+            <p>モラルがある方なら誰でも大歓迎です。</p>
+            <p>学生、未経験入社者、熟練プログラマ、趣味でプログラミングを始めたい方、どなたでも気軽にご応募下さい。</p>
         </div>
     </div>
 
     <!-- members content -->
     <!-- SHINE -->
-    <div class="members">
+    <div class="members frame">
         <div class="about_title"><h1>MEMBERS</h1></div>
 
-        <div class="members_content">
+        <div class="members_content border_line">
             <table class="members_table members_table_right">
                 <tbody>
                     <tr>
@@ -207,7 +215,7 @@
         </div>
 
         <!-- Diggy -->
-        <div class="members_content">
+        <div class="members_content border_line">
             <p><img src="./img/diggy.icon.png"></p>
             <table class="members_table members_table_left">
                 <tbody>
@@ -241,7 +249,7 @@
         </div>
 
         <!-- regupn -->
-        <div class="members_content">
+        <div class="members_content border_line">
 
                 <table class="members_table members_table_right">
                     <tbody>
@@ -316,7 +324,7 @@
 
     <!-- ACTIVITY -->
     <!-- Development -->
-    <div class="development">
+    <div class="development frame">
         <div class="about_title"><h1>開発実績</h1></div>
 
         <div class="developmnt_content">
@@ -393,7 +401,7 @@
     </div>
 
     <!-- reflection -->
-    <div class="circle_layout">
+    <div class="circle_layout frame">
         <div class="about_title"><h1>学習言語</h1></div>
         <div class="circle_layout_content">
             <p><img src="./img/htmlcss.png"></p>
@@ -410,18 +418,20 @@
     </div>
 
     <!-- tool -->
-    <div class="circle_layout">
-        <div class="about_title"><h1>ChiePro標準ツール</h1></div>
-    </div>
-    <div class="circle_layout_content size_icon">
-        <p><img src="./img/slack.png">slack</p>
-        <p><img src="./img/githun.png">Github</p>
-        <p><img src="./img/ecripse.png">Ecripse</p>
-        <p><img src="./img/Visual StudioCode.png">VScode</p>
+    <div class="frame">
+        <div class="circle_layout">
+            <div class="about_title"><h1>ChiePro標準ツール</h1></div>
+        </div>
+        <div class="circle_layout_content size_icon">
+            <p><img src="./img/slack.png">slack</p>
+            <p><img src="./img/githun.png">Github</p>
+            <p><img src="./img/ecripse.png">Ecripse</p>
+            <p><img src="./img/Visual StudioCode.png">VScode</p>
+        </div>
     </div>
 
         <!-- container -->
-    <div id="about">
+    <div id="about" class="frame">
         <div class="about_title"><h1>ChiePro</h1></div>
 
         <div class="about_container">
@@ -452,12 +462,13 @@
                     </tr>
                 </tbody>
             </table>
-        <div class="table_color"></div>
-        <p><img src="./img/about_logo.png"></p>
+            <div class="table_color"></div>
+            <p><img src="./img/about_logo.png"></p>
+        </div>
     </div>
 
     <!-- Q&A-->
-    <div class="content_question">
+    <div class="content_question frame">
         <div class="about_title"><h1>Q&A よくあるご質問</h1></div>
         <ul>
             <li><h2>Q.入会料は無料ですか？</h2></li>
@@ -476,7 +487,7 @@
 
     <!-- form -->
     <form action="" method="">
-        <div class="content_form">
+        <div class="content_form frame">
             <div class="about_title"><h1>応募・お問い合わせフォーム</h1></div>
             <div class="content_table">
                 <table class="form_table">
