style(layout.css,style.css,index.html)添削部分を修正しました

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="about_title">
             <h1>ChieProとは</h1>
         </div>
-        <div class="about_container">
+        <div class="about_content">
             <table class="about_table">
                 <tr>
                     <th>名称</th>
@@ -172,7 +172,9 @@
                     <td>9名</td>
                 </tr>
             </table>
+
             <p><img src="./img/about_logo.png"></p>
+
         </div>
     </div>
 
