stlye(index.html)添削部分を修正しました。

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
                 <h1>求める人材</h1>
             </div>
             <div class="talent_text">
-                <p>初心者でも問題なし！経験者優遇！モラルがある方なら誰でも大歓迎です。</p>
+                <p>モラルがある方なら誰でも大歓迎です。</p>
+                <p>学生、未経験入社者、熟練プログラマ、趣味でプログラミングを始めたい方、どなたでも気軽にご応募下さい。</p>
             </div>
         </div>
 
