stlye(index.html)添削部分を修正しました。

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <tbody>
                     <tr>
                         <th>・名前</th>
-                        <td>SHINE(リーダー)</td>
+                        <td>SHINE (リーダー)</td>
                     </tr>
                     <tr>
                         <th>・プログラミング歴</th>
@@ -221,21 +221,21 @@
                     </tr>
                     <tr>
                         <th>・得意な言語</th>
-                        <td>Java,HTML,CSS,Javascript,PHP,C++等</td>
+                        <td>Java, HTML, CSS, JavaScript, PHP, C++ 等</td>
                     </tr>
                     <tr>
                         <th>・資格</th>
-                        <td>ITﾊﾟｽﾎﾟｰﾄ,基本情報技術者試験,CG-ARTS,Webデザイナー検定 ベーシック等</td>
+                        <td>IT パスポート, 基本情報技術者試験, CG ARTS 協会 Web デザイナー検定 ベーシック</td>
                     </tr>
                     <tr>
                         <th>メッセージ</th>
                     </tr>
                     <tr>
                         <td rowspan="2" colspan="2" class="messege_line">
-                            当コミュニティ ChiePro の管理者、 SHINE と申します。
-                            皆でアプリ開発とか出来たら面白いよねーとか考えてたり、
-                            プロコンとかアプリ展覧会的なのに出て実績残したいなと考えてたり。
-                            私自身は四六時中プログラミングやってるそんな変態リーダーです。夜露死苦！
+                            <p>当コミュニティ ChiePro の管理者、 SHINE と申します。</p>
+                            <p>皆でアプリ開発とか出来たら面白いよねーとか考えてたり、</p>
+                            <p>プロコンとかアプリ展覧会的なのに出て実績残したいなと考えてたり。</p>
+                            <p>私自身は四六時中プログラミングやってるそんな変態リーダーです。夜露死苦！</p>
                         </td>
                     </tr>
                 </tbody>
@@ -254,7 +254,7 @@
                     </tr>
                     <tr>
                         <th>・プログラミング歴</th>
-                        <td>未経験入社なので、10ヶ月目</td>
+                        <td>未経験入社なので、1年目</td>
                     </tr>
                     <tr>
                         <th>・得意な言語</th>
@@ -269,8 +269,9 @@
                     </tr>
                     <tr>
                         <td rowspan="2" colspan="2" class="messege_line">
-                            自分を一言でいうと「自信家」<br>スポーツ、ゲーム、バイト、etc.. 何をやらせても人並み以上に出来ると自負している。<br>
-                            きっと、この業界でもトップクラスのエンジニアになってみせる。
+                            <p>自分を一言でいうと「自信家」</p>
+                            <p>スポーツ、ゲーム、バイト、etc.. 何をやらせても人並み以上に出来ると自負している。</p>
+                            <p>きっと、この業界でもトップクラスのエンジニアになってみせる。</p>
                         </td>
                     </tr>
                 </tbody>
@@ -292,18 +293,18 @@
                         </tr>
                         <tr>
                             <th>・得意な言語</th>
-                            <td>C#,PHP,HTML,Java,JavaScript,VBA</td>
+                            <td>C#, PHP, HTML, Java, JavaScript, VBA</td>
                         </tr>
                         <tr>
                             <th>・資格</th>
-                            <td>基本情報処理技術者試験,医療情報技師,FP３級,日商簿記３級</td>
+                            <td>基本情報処理技術者試験, 医療情報技師, ファイナンシャル・プランナー３級, 日商簿記３級</td>
                         </tr>
                         <tr>
                             <th>メッセージ</th>
                         </tr>
                         <tr>
                             <td rowspan="2" colspan="2" class="messege_line">
-                                    もっと面白く、もっと楽しく、もっと無邪気に。そう、まるで放課後の小学生のように。
+                                <p>もっと面白く、もっと楽しく、もっと無邪気に。そう、まるで放課後の小学生のように。</p>
                             </td>
                         </tr>
                     </tbody>
@@ -320,29 +321,28 @@
                 <tbody>
                     <tr>
                         <th>・名前</th>
-                        <td>あべのさん(Web担当)</td>
+                        <td>あべのさん (Web担当)</td>
                     </tr>
                     <tr>
                         <th>・プログラミング歴</th>
-                        <td>4ヶ月</td>
+                        <td>半年</td>
                     </tr>
                     <tr>
                         <th>・得意な言語</th>
-                        <td>HTML5,CSS3</td>
+                        <td>HTML5, CSS3</td>
                     </tr>
                     <tr>
                         <th>・資格</th>
-                        <td>　---  </td>
+                        <td>　なし  </td>
                     </tr>
                     <tr>
                         <th>メッセージ</th>
                     </tr>
                     <tr>
                         <td rowspan="2" colspan="2" class="messege_line">
-                            メンバーの中で最もキャリアが短いです。<br>
-                            このホームページも一から言語を学び完成させました。<br>
-                            様々な言語を学ぶことで、社会に貢献できるようなエンジニアになりたいと考えております。<br>
-                            「未来を恐れず、過去に執着せず、今を生きろ。」<br>
+                            <p>メンバーの中で最もキャリアが短いです。</p>
+                            <p>このホームページも一から言語を学び完成させました。</p>
+                            <p>様々な言語を学ぶことで、社会に貢献できるようなエンジニアになりたいと考えております。</p>
                         </td>
                     </tr>
                 </tbody>
