ごめん、jQueryは諦めました。

--- a/index.html
+++ b/index.html
@@ -478,14 +478,14 @@
         <div class="content_form">
             <div class="about_title"><h1>応募・お問い合わせフォーム</h1></div>
             <div class="content_table">
-                <table class="form_table" id="form_table">
+                <table class="form_table" id="top_form_table">
                     <tr class="lable_design_top form_botton_line">
-                        <td colspan="2"><label><p><input type="radio" name="example" value="応募">応募</label></p></td>
+                        <td colspan="2"><label><p><input type="radio" name="example" value="応募" checked="true">応募</label></p></td>
                         <td colspan="2" class=" table_line"><label><p><input type="radio" name="example" value="お問い合わせ">お問い合わせ</label></p></td>
                     </tr>
                     <tr class="form_botton_line">
                         <th><p>ニックネーム<span class="require">※</span></p></th>
-                        <td colspan="3" class="table_left"><p><input type="text" name="name" id="name" size="25" maxlength="20" placeholder="阿倍野　三次" required></p></td>
+                        <td colspan="3" class="table_left"><p><input type="text" name="name" id="nickname" size="25" maxlength="20" placeholder="阿倍野　三次" required></p></td>
                     </tr>
                     <tr class="form_botton_line">
                         <th><p>メールアドレス<span class="require">※</span></p></th>
@@ -524,7 +524,7 @@
                         <th colspan="4"><p>お問い合わせ内容</p></th>
                     </tr>
                     <tr>
-                        <td colspan="4" class="table_center form_botton_line"><textarea name="kanso" id="kanso" rows="7" cols="120" maxlength="500" placeholder="お問い合わせ内容"></textarea></td>
+                        <td colspan="4" class="table_center form_botton_line"><textarea name="kanso" id="contact_content" rows="7" cols="120" maxlength="500" placeholder="お問い合わせ内容"></textarea></td>
                     </tr>
                     <tr>
                         <td colspan="4" class="table_center lable_design form_botton_line">
