しれっと修正漏れ修正

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     </footer>
 
     <script type="text/javascript" src="./js/jquery.header.js"></script>
-    <script src="./js/contactToUs.js"></script>
+    <script type="text/javascript" src="./js/contactToUs.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function(){
