その他欄の考慮漏れ

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     </tr>
                     <tr class="lable_design table_left checkbox">
                         <td><label><p><input type="checkbox" name="skill" value="その他">その他</p></td>
-                        <td colspan="3" calss="lable_design_size"><p><input type="text" name="name" size="80" maxlength="30" placeholder="Objective-C,R,Perl,Go"/></p></td>
+                        <td colspan="3" calss="lable_design_size"><p><input type="text" name="name" id="etcetera_skill" size="80" maxlength="30" placeholder="Objective-C,R,Perl,Go"/></p></td>
                     </tr>
                     <tr class="form_top_line">
                         <th colspan="4"><p>お問い合わせ内容</p></th>
